fix: fix nav bar header overlap
the hero image header and the nav bar were overlapping at lower page heigts

--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -68,8 +68,20 @@ section {
 
 
 .hero-text h1 {
-
   font-size: 50px;
+}
+
+@media (max-height:530px) {
+
+
+.hero-image {
+height: 100%;
+}
+
+.hero-text {
+  top: 60%;
+}
+
 }
 
 /*about section css*/
